# Smart_Gate

./: .gitignore  LICENSE  README.md  jace.txt
docs/database/: schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ActionMenu.jsx  AdminLayout.jsx  EventActionMenu.jsx  FaceEnrollmentModal.jsx  FaceScannerModal.jsx  HeaderBar.jsx  IdCardProvider.jsx  MainMenu.jsx  QRScannerOverlay.jsx  VisitorPassPrinter.jsx
frontend/src/components/common/: AboutModal.jsx  AdminModal.jsx  ManualIdModal.jsx  Pagination.jsx  PersonCombobox.jsx  PersonIdCard.jsx  SettingsSectionHeader.jsx  SortableHeader.jsx  SuffixCombobox.jsx
frontend/src/components/toast/: ToastProvider.jsx
frontend/src/components/views/: AcademicStructure.jsx  AccessLogs.jsx  AdminAccounts.jsx  AdminDashboard.jsx  AuditTrail.jsx  DataManagement.jsx  EventManagement.jsx  FaceRecognitionManagement.jsx  MyAccount.jsx  OrganizationalStructure.jsx  SystemBrandingPanel.jsx  SystemConfigurationPanel.jsx  SystemSettings.jsx  UserManagement.jsx
frontend/src/hooks/: useFaceRecognition.js  useGhostScannerListener.js
frontend/src/utils/: formatters.js  patternHunter.js  pdfInstitutionalHeader.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  email.rs  lib.rs  models.rs
src-tauri/src/face_recognition/: alignment.rs  detector.rs  mod.rs  pipeline.rs
