[package]
name = "app"
version = "0.1.0"
default-run = "app"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
qrcode-generator = "5.0.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
